--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Ellx app framework",
   "main": "src/index.js",
+  "type": "module",
   "bin": {
     "ellx": "./src/index.js"
   },
@@ -14,9 +15,6 @@
     "files": [
       "**/*.spec.js",
       "!cypress"
-    ],
-    "require": [
-      "esm"
     ]
   },
   "repository": {
@@ -34,15 +32,20 @@
   "homepage": "https://github.com/dmaevsky/ellx-app#readme",
   "dependencies": {
     "binary-search": "^1.3.6",
+    "chokidar": "^3.5.2",
     "command-line-args": "^5.1.1",
     "conclure": "^1.2.1",
     "conclure-quarx": "^0.2.3",
     "lodash-es": "^4.17.21",
+    "nanoid": "^3.1.23",
+    "node-abort-controller": "^2.0.0",
+    "node-fetch": "^2.6.1",
     "polka": "^0.5.2",
     "quarx": "^3.3.1",
     "rd-parse": "^3.3.1",
     "rd-parse-jsexpr": "^2.0.1",
     "serve-static": "^1.14.1",
+    "sucrase": "^3.20.0",
     "tinyx": "^2.1.1",
     "ws": "^7.5.1"
   },
