--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nanoid": "^3.1.23",
     "node-abort-controller": "^2.0.0",
     "node-fetch": "^2.6.1",
+    "open": "^8.4.0",
     "polka": "^0.5.2",
     "quarx": "^3.3.1",
     "rd-parse": "^3.4.0",
