--- a/package.json
+++ b/package.json
@@ -39,21 +39,21 @@
     "chokidar": "^3.5.2",
     "command-line-args": "^5.1.1",
     "conclure": "^2.0.0",
-    "conclure-quarx": "^0.3.0",
+    "conclure-quarx": "^0.4.3",
     "lodash-es": "^4.17.21",
     "md5": "^2.3.0",
     "nanoid": "^3.1.23",
     "node-abort-controller": "^2.0.0",
     "node-fetch": "^2.6.1",
     "polka": "^0.5.2",
-    "quarx": "^3.3.1",
+    "quarx": "^3.4.0",
     "rd-parse": "^3.4.0",
     "rd-parse-jsexpr": "^2.1.0",
     "serve-static": "^1.14.1",
     "sucrase": "^3.20.0",
     "svelte": "^3.38.3",
     "tinyx": "^2.2.0",
-    "tokamak": "^0.0.14",
+    "tokamak": "dmaevsky/tokamak#dddc58665fa259b0ddb9e23d1493f40c3bed67da",
     "ws": "^7.5.1"
   },
   "devDependencies": {
