--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "sucrase": "^3.20.0",
     "svelte": "^3.38.3",
     "tinyx": "^2.2.0",
-    "tokamak": "dmaevsky/tokamak#dddc58665fa259b0ddb9e23d1493f40c3bed67da",
+    "tokamak": "^0.0.15",
     "ws": "^7.5.1"
   },
   "devDependencies": {
