--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "ellx": "./src/index.js"
   },
   "scripts": {
-    "build": "rollup -c",
-    "prepublishOnly": "yarn build",
     "test": "ava -v"
   },
   "ava": {
@@ -51,27 +49,13 @@
     "serve-static": "^1.14.1",
     "sucrase": "^3.20.0",
     "svelte": "^3.38.3",
+    "tailwindcss": "^3.0.15",
     "tinyx": "^2.2.0",
     "tokamak": "^0.0.15",
     "ws": "^7.5.1"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.0.3",
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
     "acorn": "^8.4.1",
-    "autoprefixer": "^10.2.6",
-    "ava": "^3.15.0",
-    "cssnano": "^5.0.6",
-    "postcss": "^8.3.5",
-    "postcss-import": "^14.0.2",
-    "rollup": "^2.52.3",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-modify": "^3.0.0",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte-preprocess": "^4.7.3",
-    "tailwindcss": "^2.2.4",
-    "tinycolor2": "^1.4.2"
+    "ava": "^3.15.0"
   }
 }
