add postcss: it is a peer dep of tailwind, so we want apps to work with yarn which does not install peers by default

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-fetch": "^2.6.1",
     "open": "^8.4.0",
     "polka": "^0.5.2",
+    "postcss": "^8.4.5",
     "quarx": "^4.0.0",
     "rd-parse": "^3.4.0",
     "rd-parse-jsexpr": "^2.1.0",
