--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev:tailwind": "tailwindcss -c ./tailwind.config.cjs -i ./src/input.css -o ./src/bootstrap/sandbox.css --watch",
-    "dev": "concurrently \"./src/cli.js start\" \"npm run dev:tailwind\"",
+    "dev": "cp -f src/index.ellx.frozen src/index.ellx && concurrently \"./src/cli.js start\" \"npm run dev:tailwind\"",
     "test": "ava -v"
   },
   "ava": {
